src/test/ui/issues/issue-98299.stderr
error[E0282]: type annotations needed
  --> $DIR/issue-98299.rs:4:5
   |
LL |     SmallCString::try_from(p).map(|cstr| cstr);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type for enum `Result<SmallCString<{_: usize}>, ()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
